--- a/distributeProfile/ansible.cfg
+++ b/distributeProfile/ansible.cfg
@@ -7,7 +7,7 @@ ansible_python_interpreter      = /usr/bin/python2.6
 action_plugins                  = /usr/lib/python2.7/site-packages/ansible/runner/action_plugins
 ansible_connection              = ssh
 ansible_managed                 = Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S by {uid} on {host}
-ask_pass                        = FALSE ## This assumes keys are in use
+ask_pass                        = TRUE
 bin_ansible_callbacks           = TRUE
 callback_plugins                = /usr/lib/python2.7/site-packages/ansible/runner/callback_plugins
 command_warnings                = TRUE
@@ -35,11 +35,11 @@ fact_caching                    = redis
 become                          = FALSE
 become_method                   = sudo
 become_user                     = root
-become_ask_pass                 = FALSE
+become_ask_pass                 = TRUE
 
 [ssh_connection]
-ssh_args                        = -o ControlMaster=auto -o ControlPersist=60s
-control_path                    = %(directory)s/ansible-ssh-%%h-%%p-%%r
+#ssh_args                        = -o ControlMaster=auto -o ControlPersist=60s
+#control_path                    = %(directory)s/ansible-ssh-%%h-%%p-%%r
 scp_if_ssh                      = FALSE
 
 [accelerate]
