--- a/distributeProfile/roles/installProfile/tasks/sync.yml
+++ b/distributeProfile/roles/installProfile/tasks/sync.yml
@@ -14,7 +14,8 @@
     perms=yes
     recursive=yes
     rsync_timeout=0
-    rsync_opts="-qavr --delete --delete-excluded --exclude 'dotbot' --no-motd"
+    rsync_opts="-qavr --delete --delete-excluded --exclude 'dotbot' --exclude '.git' --no-motd"
+    use_ssh_args=yes
   notify:
     - install
 
