--- a/emailops-build/group_vars/maildrop/zimlets.yml
+++ b/emailops-build/group_vars/maildrop/zimlets.yml
@@ -4,13 +4,36 @@
 #==============================================================================
 ---
 zimlets:
-  - zimbra-zimlet-generic-com_synacor_dnd
-  - zimbra-zimlet-generic-com_synacor_external_email
-  - zimbra-zimlet-generic-com_synacor_reference
-  - zimbra-zimlet-generic-com_synacor_spam
-  - zimbra-zimlet-generic-com_synacor_social
-  - zimbra-zimlet-generic-com_synacor_core_change
-  - zimbra-zimlet-generic-com_synacor_dynamic_ads
+  - name: zimbra-zimlet-generic-com_synacor_dnd
+    version: 2012.09.27.10.14-1.noarch
+  - name: zimbra-zimlet-generic-com_synacor_external_email
+    version: 2015.06.16.10.27-1.noarch
+  - name: zimbra-zimlet-generic-com_synacor_reference
+    version: 2012.09.27.14.24-1.noarch
+  - name: zimbra-zimlet-generic-com_synacor_spam
+    version: 2014.08.21.15.11-1.noarch
+  - name: zimbra-zimlet-generic-com_synacor_social
+    version: 2014.01.13.08.35-1.noarch
+  - name: zimbra-zimlet-generic-com_synacor_core_change
+    version: 2014.06.06.09.10-1.noarch
+  - name: zimbra-zimlet-generic-com_synacor_dynamic_ads
+    version: 2014.10.27.11.31-1.noarch
+  - name: zimbra-zimlet-generic-com_synacor_alias
+    version: 2015.03.03.09.23-1.noarch
+  - name: zimbra-zimlet-generic-com_synacor_portal
+    version: 2012.09.13.13.12-1.noarch
+  - name: zimbra-zimlet-generic-com_synacor_collector
+    version: 2012.10.03.14.36-1.noarch
+  - name: zimbra-zimlet-generic-com_synacor_ads_refresh
+    version: 2012.07.26.09.38-1.noarch
+  - name: zimbra-zimlet-generic-com_synacor_calscheduler
+    version: 2012.09.11.13.36-1.noarch
+  - name: zimbra-zimlet-generic-com_synacor_report_phishing
+    version: 2012.04.13.17.02-1.noarch
+  - name: zimbra-zimlet-generic-com_synacor_carbyn
+    version: 2013.03.25.14.07-1.noarch
+  - name: zimbra-zimlet-generic-com_synacor_spam_ecelerity
+    version: 2015.05.13.12.43-1.noarch
 
 ##
 ## custom skins/zimlets as necessary
