should work now.

--- a/distributeProfile/ansible.cfg
+++ b/distributeProfile/ansible.cfg
@@ -7,7 +7,7 @@ ansible_python_interpreter      = /usr/bin/python2.6
 action_plugins                  = /usr/lib/python2.7/site-packages/ansible/runner/action_plugins
 ansible_connection              = ssh
 ansible_managed                 = Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S by {uid} on {host}
-ask_pass                        = TRUE
+ask_pass                        = FALSE
 bin_ansible_callbacks           = TRUE
 callback_plugins                = /usr/lib/python2.7/site-packages/ansible/runner/callback_plugins
 command_warnings                = TRUE
