--- a/emailops-build/roles/build-nginx/tasks/run-installation.yml
+++ b/emailops-build/roles/build-nginx/tasks/run-installation.yml
@@ -6,7 +6,7 @@
 ##
 ## Run installation steps
 ##
-- name: (INSTALL) Install selected packages
+- name: (INSTALL) Install selected packages (NGINX)
   yum:
     name: "{{ item.name }}-{{ item.version }}"
     state: present
