--- a/emailops-build/roles/build-zimbra/tasks/maildrop/zimlets.yml
+++ b/emailops-build/roles/build-zimbra/tasks/maildrop/zimlets.yml
@@ -3,23 +3,13 @@
 #   DESCRIPTION:  Install and configure Zimbra zimlets
 #==============================================================================
 ---
-
-yum -y install zimbra-zimlet-generic-com_synacor*
-sudo -u 'zmzimletctl ldapDeploy com_synacor_carbyn'
-sudo -u 'zmzimletctl enable com_synacor_carbyn'
-sudo -u '[ -f /opt/zimbra/zimlets-deployed/com_synacor_carbyn/config_template.xml ] && zmzimletctl configure /opt/zimbra/zimlets-deployed/com_synacor_carbyn/config_template.xml'
-sudo -u 'zmzimletctl ldapDeploy com_synacor_alias'
-sudo -u 'zmzimletctl enable com_synacor_alias'
-sudo -u '[ -f /opt/zimbra/zimlets-deployed/com_synacor_alias/config_template.xml ] && zmzimletctl configure /opt/zimbra/zimlets-deployed/com_synacor_alias/config_template.xml'
-
-
 ##
 ## install zimlets
 ##
 - name: (POSTINSTALL) Install zimlets
   yum:
     disable_gpg_check=yes
-    name="{{ item }}"
+    name="{{ item.name }}-{{ item.version }}"
     state=present
   with_items: "{{ zimlets|default([]) }}"
   when: install_synacor_skins_zimlets|bool
@@ -30,7 +20,7 @@ sudo -u '[ -f /opt/zimbra/zimlets-deployed/com_synacor_alias/config_template.xml
 - name: (POSTINSTALL) Install skins
   yum:
     disable_gpg_check=yes
-    name="{{ item }}"
+    name="{{ item.name }}-{{ item.version }}"
     state=present
   with_items: "{{ skins|default([]) }}"
   when: install_synacor_skins_zimlets|bool
@@ -41,7 +31,7 @@ sudo -u '[ -f /opt/zimbra/zimlets-deployed/com_synacor_alias/config_template.xml
 - name: (POSTINSTALL) Install zimlets (client specific)
   yum:
     disable_gpg_check=yes
-    name="{{ item }}"
+    name="{{ item.name }}-{{ item.version }}"
     state=present
   with_items: "{{ custom_zimlets|default([]) }}"
   when: install_synacor_skins_zimlets|bool
@@ -49,10 +39,17 @@ sudo -u '[ -f /opt/zimbra/zimlets-deployed/com_synacor_alias/config_template.xml
 - name: (POSTINSTALL) Install skins (client specific)
   yum:
     disable_gpg_check=yes
-    name="{{ item }}"
+    name="{{ item.name }}-{{ item.version }}"
     state=present
   with_items: "{{ custom_skins|default([]) }}"
   when: install_synacor_skins_zimlets|bool
+
+#sudo -u 'zmzimletctl ldapDeploy com_synacor_carbyn'
+#sudo -u 'zmzimletctl enable com_synacor_carbyn'
+#sudo -u '[ -f /opt/zimbra/zimlets-deployed/com_synacor_carbyn/config_template.xml ] && zmzimletctl configure /opt/zimbra/zimlets-deployed/com_synacor_carbyn/config_template.xml'
+#sudo -u 'zmzimletctl ldapDeploy com_synacor_alias'
+#sudo -u 'zmzimletctl enable com_synacor_alias'
+#sudo -u '[ -f /opt/zimbra/zimlets-deployed/com_synacor_alias/config_template.xml ] && zmzimletctl configure /opt/zimbra/zimlets-deployed/com_synacor_alias/config_template.xml'
 
 ##
 ## set preferred skin
