--- a/emailops-build/roles/build-nginx/tasks/main.yml
+++ b/emailops-build/roles/build-nginx/tasks/main.yml
@@ -3,10 +3,10 @@
 #   DESCRIPTION:  Primary entry point for this play
 #==============================================================================
 ---
-- name: Run nginx installation steps
-  include: run-installation.yml
-  notify:
-    - sync-puppet
+#- name: Run nginx installation steps
+#  include: run-installation.yml
+#  notify:
+#    - sync-puppet
 
 - name: Run nginx installation steps
   include: run-postinstall.yml
