Fixed a bug in NoteLineCount... not seriously...

--- a/emailops-build/ansible.cfg
+++ b/emailops-build/ansible.cfg
@@ -38,7 +38,7 @@ become_user                     = root
 become_ask_pass                 = TRUE
 
 [ssh_connection]
-ssh_args                        = -o ControlMaster=auto -o ControlPersist=60s -F /home/khuntly/.ssh/dev/config.d/01-md
+ssh_args                        = -o ControlMaster=auto -o ControlPersist=60s
 control_path                    = %(directory)s/ansible-ssh-%%h-%%p-%%r
 scp_if_ssh                      = FALSE
 
