--- a/emailops-build/roles/build-nginx/tasks/run-postinstall.yml
+++ b/emailops-build/roles/build-nginx/tasks/run-postinstall.yml
@@ -26,7 +26,7 @@
 
 - name: (POSTINSTALL) Create nginx SSL directory
   file:
-    path=/etc/nginx/ssl
+    path="{{ nginx_ssl_dir }}"
     state=directory
 
 - name: (POSTINSTALL) Generate 2048 bit DH key for nginx (logjam)
@@ -83,10 +83,10 @@
       -extensions v3_ca
       -days {{ item.days|default(30) }}
       -subj "/C={{ item.country|default('US') }}/ST={{ item.state|default('New York') }}/L={{ item.city|default('Buffalo') }}/O={{ item.organization|default('Synacor, Inc') }}/OU={{ item.unit|default('Email Operations') }}/CN={{ item.name }}/emailAddress={{ item.email|default('emailops@synacor.com') }}"
-      -keyout {{ openssl_keys_path }}/{{ item.name }}.key
-      -out {{ openssl_certs_path }}/{{ item.name }}.crt
+      -keyout {{ nginx_ssl_dir }}/{{ item.name }}.key
+      -out {{ nginx_ssl_dir }}/{{ item.name }}.crt
   args:
-    creates: "{{ openssl_certs_path }}/{{ item.name }}.crt"
+    creates: "{{ nginx_ssl_dir }}/{{ item.name }}.crt"
   with_items: openssl_self_signed
   when: self_signed_enabled|bool
 
