--- a/emailops-build/group_vars/maildrop/yum.yml
+++ b/emailops-build/group_vars/maildrop/yum.yml
@@ -6,7 +6,9 @@
 ##
 ## yum installs
 ##
-packages:
+zimbra_packages:
+  - name: zimbra-core
+    version: "{{ pkg_version }}.{{ hostvars[inventory_hostname]['ansible_architecture'] }}"
   - name: zimbra-store
     version: "{{ pkg_version }}.{{ hostvars[inventory_hostname]['ansible_architecture'] }}"
   - name: zimbra-apache
