--- a/emailops-build/group_vars/ldap/yum.yml
+++ b/emailops-build/group_vars/ldap/yum.yml
@@ -6,6 +6,8 @@
 ##
 ## yum installs
 ##
-packages:
+zimbra_packages:
+  - name: zimbra-core
+    version: "{{ pkg_version }}.{{ hostvars[inventory_hostname]['ansible_architecture'] }}"
   - name: zimbra-ldap
     version: "{{ pkg_version }}.{{ hostvars[inventory_hostname]['ansible_architecture'] }}"
