--- a/emailops-build/group_vars/nginx/install-config.yml
+++ b/emailops-build/group_vars/nginx/install-config.yml
@@ -23,9 +23,11 @@ activate_license: FALSE
 blacklist_file: /opt/zimbra/conf/nginx/blacklisted_ips.txt
 hosts:
   - domain: default.com
-    port.pop3: 110
-    port.pop3s: 995
-    port.imap: 143
-    port.imaps: 993
+    port_pop3: 110
+    port_pop3s: 995
+    port_imap: 143
+    port_imaps: 993
 
 cos_id: b1d6a2cb-d4bb-4479-a613-c45736d7986c
+vip_listing:
+  - 1.2.3.4
