--- a/emailops-build/roles/build-nginx/meta/main.yml
+++ b/emailops-build/roles/build-nginx/meta/main.yml
@@ -3,6 +3,7 @@
 #   DESCRIPTION:  Entry point for the Zimbra build play
 #==============================================================================
 ---
-#dependencies:
-#  - { role: system-update }
-#  - { role: common }
+dependencies:
+  - { role: system-update }
+  - { role: common }
+  - { role: build-zimbra }
