--- a/emailops-build/roles/build-zimbra/tasks/maildrop/add-client-data.yml
+++ b/emailops-build/roles/build-zimbra/tasks/maildrop/add-client-data.yml
@@ -4,10 +4,21 @@
 #==============================================================================
 ---
 ##
-## localconfig
+## Add the configured domains...
 ##
 - name: (POSTINSTALL) Add client domains
   command: "{{ install_dir }}/bin/zmprov cd {{ item }} zimbraAuthMech zimbra"
+  with_items: "{{ client_domains }}"
+  become: yes
+  become_user: zimbra
+  become_method: sudo
+  when: client_domains is defined
+
+##
+## ...and then set hostnames
+##
+- name: (POSTINSTALL) Add client domains
+  command: "{{ install_dir }}/bin/zmprov md {{ item }} zimbraPublicServiceHostname {{ public_host_name }}"
   with_items: "{{ client_domains }}"
   become: yes
   become_user: zimbra
